# opengl_template

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md  test.cpp
include/: shader.hpp  shaderProgram.hpp  window.hpp
resources/shaders/: simple.frag  simple.vert
source/: shader.cpp  shaderProgram.cpp  window.cpp
